# freebsd-first-steps

./: README.md  pyproject.toml
src/freebsd_first_steps/: Host.py  __main__.py  cli.py
src/freebsd_first_steps/api/: __init__.py  _hostname.py  hostname.py  timezone.py
src/freebsd_first_steps/pages/: 01_Private_Network.py
src/freebsd_first_steps/remote/: Remote_Install.py
